# osgTechniques

./: CMakeLists.txt
circleSector/: CMakeLists.txt
circleSector/src/: logfilehandler.hpp  main.cpp
gasket/: .CMakeLists.txt.swp  CMakeLists.txt
gasket/src/: logfilehandler.cpp  main.cpp
resources/: cessna.osg
src/: main.cpp
